--- a/iOS.storyboard
+++ b/iOS.storyboard
@@ -23,7 +23,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.14509803921568626" green="0.15294117647058825" blue="0.21568627450980393" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="dpp-vc-pcz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="8Kd-r2-G5E"/>
                             <constraint firstItem="dpp-vc-pcz" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="AZX-Ke-ZON"/>
